--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "shared-orm-library",
   "version": "1.0.0",
   "description": "",
-  "main": "src/data-source.js",
+  "main": "dist/data-source.js",
+  "types": "dist/data-source.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prepublishOnly": "npm run build",
+    "clean": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,7 @@
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
-    "@types/node": "^22.13.14"
+    "@types/node": "^22.13.14",
+    "typescript": "^5.8.2"
   }
 }
